# rffe-uc-fw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
FreeRTOS/: CMakeLists.txt
app/: CMakeLists.txt  cdce906.c  cdce906.h  entry.c  feram.c  feram.h  pin_mapping.c  pin_mapping.h
boot/: boot.c  boot.h
cmake/: toolchain-arm-none-eabi.cmake
port/: CMakeLists.txt
port/nxp/lpc17xx/: CMakeLists.txt
port/nxp/lpc17xx/lpcopen/src/: i2c_17xx_40xx.c
port/nxp/lpc17xx/rtosconf/: FreeRTOSConfig.h
port/nxp/lpc17xx/startup/: sysinit.c
port/nxp/lpc17xx/uhal_port/: CMakeLists.txt  gpio_port.h  i2c_port.c  i2c_port.h  pin_cfg_port.h  power_port.h  uart_port.c  uart_port.h
uhal/: CMakeLists.txt  freertos-openocd.c  gpio.h  i2c.c  i2c.h  main.c  pin_cfg.h  pin_init.c  pin_init.h  power.h  uart.c  uart.h
