if(NOT TARGET_CONTROLLER)
  message(FATAL_ERROR "Target controller was not selected! You can pass the flag -DTARGET_CONTROLLER=<controller> or set it on the board CMakeLists.txt")
else()
  message(STATUS "Selected Controller: ${TARGET_CONTROLLER}")
endif()

if(${TARGET_CONTROLLER} MATCHES "^(lpc|LPC)17")
  add_subdirectory(nxp/lpc17xx)
else ()
  message(FATAL_ERROR "Selected Controller \"${TARGET_CONTROLLER}\" is not supported!")
endif()

set(UHAL_PORT_PATH ${UHAL_PORT_PATH} PARENT_SCOPE)
set(RTOSCONF_PATH ${RTOSCONF_PATH} PARENT_SCOPE)
set(TARGET_ARCH ${TARGET_ARCH} PARENT_SCOPE)
set(TARGET_CPU ${TARGET_CPU} PARENT_SCOPE)
set(TARGET_LIBS ${TARGET_LIBS} PARENT_SCOPE)
set(TARGET_LINK_FLAGS "${TARGET_LINK_FLAGS}" PARENT_SCOPE)
set(UCONTROLLER_SRCS ${UCONTROLLER_SRCS} PARENT_SCOPE)
set(UCONTROLLER_HDRS ${UCONTROLLER_HDRS} PARENT_SCOPE)
set(APP_LINKER_SCRIPT ${APP_LINKER_SCRIPT} PARENT_SCOPE)
set(BOOT_LINKER_SCRIPT ${BOOT_LINKER_SCRIPT} PARENT_SCOPE)
set(BOOT_START_ADDR "0x00000000" PARENT_SCOPE)
set(APP_START_ADDR "0x00002000" PARENT_SCOPE)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}" PARENT_SCOPE)
set(OPENOCD_TARGET ${OPENOCD_TARGET} PARENT_SCOPE)
set(DEBUG_PROBE ${DEBUG_PROBE} PARENT_SCOPE)
